@@ -1,3 +1,8 @@
+2006-07-04  Jakub Steiner <jimmac@ximian.com>
+
+	* appointment-soon, appointment-missed: tangoed
+	* emblem-bin: removed
+	
 2006-07-03  Rodney Dawes  <dobey@novell.com>
 
 	* configure.in: Add scalable/categories to output
